log
Tue, Mar 25, 2025 11:09:58 PM: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
25021aa
Tue, Mar 25, 2025 11:16:11 PM: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function 'firstList':
list.c:42:1: error: control reaches end of non-void function [-Werror=return-type]
   42 | }
      | ^
cc1.exe: all warnings being treated as errors
Compilation failed
51ff100
Tue, Mar 25, 2025 11:16:48 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function 'firstList':
list.c:42:1: error: control reaches end of non-void function [-Werror=return-type]
   42 | }
      | ^
cc1.exe: all warnings being treated as errors
Compilation failed
a5dd9f3
Tue, Mar 25, 2025 11:17:22 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function 'firstList':
list.c:42:1: error: control reaches end of non-void function [-Werror=return-type]
   42 | }
      | ^
cc1.exe: all warnings being treated as errors
Compilation failed
07111c5
